DTSPB-4293 Fix Sonar issue